--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <img class="wordpress"src="images\wordpress-gif.webp" alt="WordPress-logo"></a>
     <a class="footer-link" href="https://www.instagram.com/BLWilliams83/">
       <img class="instagram"src="images\instagram.gif" alt="instagram"></a>
-    <a class="footer-link" href="https://github.com/TwiztedQBall">
+    <a class="footer-link" href="https://github.com/StackedAlchemist">
         <img class="github"src="images\github.gif" alt="github"></a>
     <p class="copyright">© 2022 Billy Williams .</p>
   </div>
